<resources>
    <string name="app_name">Health Log</string>
    <string name="action_settings">Settings</string>
    <string name="eventTitleText">How is it going?</string>
    <string name="human_body_image">Human body image</string>
    <string name="event_date_today">Today</string>
    <string name="event_date_yesterday">Yesterday</string>
    <string name="event_date_forward_text"><![CDATA[>]]></string>
    <string name="event_date_back_text"><![CDATA[<]]></string>
    <string name="event_description_mood">%s</string>
    <string name="event_description_temperature">%.1f°</string>
    <string name="event_description_energy">%.1f%%</string>
    <string name="areaViewBackButton">Back</string>
    <string name="empty">Empty placeholder</string>
    <string name="pain_type_hint">Type of pain</string>
    <string name="search">Search</string>
    <string name="fromDate">From %s</string>
    <string name="historyChartDates">From %s till %s</string>
    <string name="abdominal_pain">Abdominal Pain</string>
    <string name="abnormal_facial_expressions">Abnormal Facial Expressions</string>
    <string name="abscessed_tooth_symptoms_and_signs">Abscessed Tooth Symptoms and Signs</string>
    <string name="acid_reflux_gerd_symptoms_and_signs">Acid Reflux (GERD) Symptoms and Signs</string>
    <string name="acute_sinusitis_symptoms_and_signs">Acute Sinusitis Symptoms and Signs</string>
    <string name="adhd_symptoms_and_signs">ADHD Symptoms and Signs</string>
    <string name="alcohol_poisoning_symptoms_and_signs">Alcohol Poisoning Symptoms and Signs</string>
    <string name="alcohol_withdrawal_symptoms_and_signs">Alcohol Withdrawal Symptoms and Signs</string>
    <string name="allergy">Allergy</string>
    <string name="altered_mental_status">Altered Mental Status</string>
    <string name="alzheimers_disease_symptoms_and_signs">Alzheimer\'s Disease Symptoms and Signs</string>
    <string name="anal_itching">Anal Itching</string>
    <string name="anaphylaxis_symptoms_and_signs">Anaphylaxis Symptoms and Signs</string>
    <string name="anemia">Anemia</string>
    <string name="angular_cheilitis_symptoms_and_signs">Angular Cheilitis Symptoms and Signs</string>
    <string name="ankle_pain">Ankle Pain</string>
    <string name="anxiety">Anxiety</string>
    <string name="appendicitis_symptoms_and_signs">Appendicitis Symptoms and Signs</string>
    <string name="arm_pain">Arm Pain</string>
    <string name="arrhythmia_symptoms_and_signs">Arrhythmia Symptoms and Signs</string>
    <string name="asthma_symptoms_and_signs">Asthma Symptoms and Signs</string>
    <string name="atrial_fibrillation_afib_symptoms_and_signs">Atrial fibrillation (AFib) Symptoms and Signs</string>
    <string name="atrial_flutter_symptoms_and_signs">Atrial Flutter Symptoms and Signs</string>
    <string name="autism_symptoms_and_signs">Autism Symptoms and Signs</string>
    <string name="back_pain">Back Pain</string>
    <string name="bad_breath">Bad Breath</string>
    <string name="bad_taste_in_the_mouth">Bad Taste in the Mouth</string>
    <string name="beaus_lines">Beau\'s Lines</string>
    <string name="benign_positional_vertigo_symptoms_and_signs">Benign Positional Vertigo Symptoms and Signs</string>
    <string name="binge_eating_disorder_symptoms_and_signs">Binge Eating Disorder Symptoms and Signs</string>
    <string name="bipolar_disorder_symptoms_and_signs">Bipolar Disorder Symptoms and Signs</string>
     <string name="bird_flu_avian_influenza_symptoms_and_signs">Bird Flu (Avian Influenza) Symptoms and Signs</string>
    <string name="bladder_infection_symptoms_and_signs">Bladder Infection Symptoms and Signs</string>
    <string name="bladder_spasms">Bladder Spasms</string>
    <string name="bleeding_gums">Bleeding Gums</string>
    <string name="blepharitis_symptoms_and_signs">Blepharitis Symptoms and Signs</string>
    <string name="blisters">Blisters</string>
    <string name="blood_clot_symptoms_and_signs">Blood Clot Symptoms and Signs</string>
    <string name="blood_in_semen">Blood in Semen</string>
    <string name="blood_in_urine">Blood In Urine</string>
    <string name="bloody_nose">Bloody Nose</string>
    <string name="bloody_sputum">Bloody Sputum</string>
    <string name="blurred_vision">Blurred Vision</string>
    <string name="brain_aneurysm_symptoms_and_signs">Brain Aneurysm Symptoms and Signs</string>
    <string name="brain_tumor_symptoms_and_signs">Brain Tumor Symptoms and Signs</string>
    <string name="breast_cancer_symptoms_and_signs">Breast Cancer Symptoms and Signs</string>
    <string name="breast_discharge">Breast Discharge</string>
    <string name="breast_lumps">Breast Lumps</string>
    <string name="breast_pain">Breast Pain</string>
    <string name="brittle_nails">Brittle Nails</string>
    <string name="bronchitis_symptoms_and_signs">Bronchitis Symptoms and Signs</string>
    <string name="bumps_on_skin">Bumps on Skin</string>
    <string name="burning_mouth_syndrome_symptoms_and_signs">Burning Mouth Syndrome Symptoms and Signs</string>
    <string name="burning_urination">Burning Urination</string>
    <string name="bursitis_symptoms_and_signs">Bursitis Symptoms and Signs</string>
    <string name="buttock_pain">Buttock Pain</string>
    <string name="carbon_monoxide_poisoning_symptoms_and_signs">Carbon Monoxide Poisoning Symptoms and Signs</string>
    <string name="carpal_tunnel_syndrome_symptoms_and_signs">Carpal Tunnel Syndrome Symptoms and Signs</string>
    <string name="cat_scratch_disease_symptoms_and_signs">Cat Scratch Disease Symptoms and Signs</string>
    <string name="catatonia_catatonic_behavior">Catatonia (Catatonic Behavior)</string>
    <string name="cellulitis_symptoms_and_signs">Cellulitis Symptoms and Signs</string>
    <string name="cervical_cancer_symptoms_and_signs">Cervical Cancer Symptoms and Signs</string>
    <string name="chalazion_symptoms_and_signs">Chalazion Symptoms and Signs</string>
    <string name="changes_in_skin_of_the_breast">Changes in Skin of the Breast</string>
    <string name="chapped_lips_cheilitis">Chapped Lips (Cheilitis)</string>
    <string name="chest_pain">Chest Pain</string>
    <string name="chills">Chills</string>
    <string name="chlamydia_symptoms_and_signs">Chlamydia Symptoms and Signs</string>
    <string name="chronic_fatigue_syndrome_symptoms_and_signs">Chronic Fatigue Syndrome Symptoms and Signs</string>
    <string name="chronic_pain">Chronic Pain</string>
    <string name="chronic_sore_throat_symptoms_and_signs">Chronic Sore Throat Symptoms and Signs</string>
    <string name="cloudy_urine">Cloudy Urine</string>
    <string name="coccydynia">Coccydynia</string>
    <string name="cold">Cold</string>
    <string name="cold_feet">Cold Feet</string>
    <string name="cold_fingers">Cold Fingers</string>
    <string name="cold_hands">Cold Hands</string>
    <string name="colitis_symptoms_and_signs">Colitis Symptoms and Signs</string>
    <string name="colon_cancer_symptoms_and_signs">Colon Cancer Symptoms and Signs</string>
    <string name="concussion_symptoms_and_signs">Brain Trauma (Concussion Symptoms and Signs)</string>
    <string name="confusion">Confusion</string>
    <string name="constipation">Constipation</string>
    <string name="contact_dermatitis_symptoms_and_signs">Contact Dermatitis Symptoms and Signs</string>
    <string name="copd_symptoms_and_signs">COPD Symptoms and Signs</string>
    <string name="cough">Cough</string>
    <string name="crohns_disease_symptoms_and_signs">Crohn\'s Disease Symptoms and Signs</string>
    <string name="cyanosisturning_blue">Cyanosis/Turning Blue</string>
    <string name="cystic_fibrosis_symptoms_and_signs">Cystic Fibrosis Symptoms and Signs</string>
    <string name="dark_circles_under_the_eyes">Dark Circles Under the Eyes</string>
    <string name="dark_urine">Dark Urine</string>
    <string name="decreased_appetite">Decreased Appetite</string>
    <string name="dehydration_symptoms_and_signs">Dehydration Symptoms and Signs</string>
    <string name="delirium">Delirium</string>
    <string name="delusions">Delusions</string>
    <string name="dengue_symptoms_and_signs">Dengue Symptoms and Signs</string>
    <string name="depigmentation_of_skin">Depigmentation of Skin</string>
    <string name="depression">Depression</string>
    <string name="diabetes_symptoms_and_signs">Diabetes Symptoms and Signs</string>
    <string name="diabetic_ketoacidosis_dka_symptoms_and_signs">Diabetic Ketoacidosis (DKA) Symptoms and Signs</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="difficulty_concentrating">Difficulty Concentrating</string>
    <string name="difficulty_urinating">Difficulty Urinating</string>
    <string name="difficulty_with_speech">Difficulty With Speech</string>
    <string name="dilated_pupils_mydriasis">Dilated Pupils (Mydriasis)</string>
    <string name="distended_stomach_abdominal_distention">Distended Stomach (Abdominal Distention)</string>
    <string name="distractibility">Distractibility</string>
    <string name="diverticulitis_symptoms_and_signs">Diverticulitis Symptoms and Signs</string>
    <string name="dizziness">Dizziness</string>
    <string name="double_vision">Double Vision</string>
    <string name="drainage_of_pus">Drainage of Pus</string>
    <string name="drooling">Drooling</string>
    <string name="dry_eye">Dry Eye</string>
    <string name="dry_mouth">Dry Mouth</string>
    <string name="dry_skin">Dry Skin</string>
    <string name="dry_socket_symptoms_and_signs">Dry Socket Symptoms and Signs</string>
    <string name="dysarthria">Dysarthria</string>
    <string name="dyspepsia">Dyspepsia</string>
    <string name="dysphagia">Dysphagia</string>
    <string name="earache">Earache</string>
    <string name="easy_bruising">Easy Bruising</string>
    <string name="ebola_virus_disease_symptoms_and_signs">Ebola Virus Disease Symptoms and Signs</string>
    <string name="echolalia">Echolalia</string>
    <string name="elbow_pain">Elbow Pain</string>
    <string name="endocarditis_symptoms_and_signs">Endocarditis Symptoms and Signs</string>
    <string name="endometriosis_symptoms_and_signs">Endometriosis Symptoms and Signs</string>
    <string name="enlarged_heart">Enlarged Heart</string>
    <string name="enthesitis_symptoms_and_signs">Enthesitis Symptoms and Signs</string>
    <string name="euphoria">Euphoria</string>
    <string name="excessive_sweating">Excessive Sweating</string>
    <string name="eye_discharge">Eye Discharge</string>
    <string name="eye_floaters">Eye Floaters</string>
    <string name="eye_pain">Eye Pain</string>
    <string name="eye_twitch">Eye Twitch</string>
    <string name="eyestrain_symptoms_and_signs">Asthenopia (Eyestrain Symptoms and Signs)</string>
    <string name="fainting">Fainting</string>
    <string name="fatigue_and_tiredness">Fatigue and Tiredness</string>
    <string name="fecal_incontinence">Fecal Incontinence</string>
    <string name="fever">Fever</string>
    <string name="fibromyalgia_symptoms_and_signs">Fibromyalgia Symptoms and Signs</string>
    <string name="finger_pain">Finger Pain</string>
    <string name="flaky_scalp">Flaky Scalp</string>
    <string name="flat_affect">Flat Affect</string>
    <string name="flu">Flu</string>
    <string name="foot_pain">Foot Pain</string>
    <string name="foreign_body_in_the_eye_symptoms_and_signs">Foreign Body in the Eye Symptoms and Signs</string>
    <string name="frequent_urination">Frequent Urination</string>
    <string name="gallbladder_attack_symptoms_and_signs">Gallbladder Attack Symptoms and Signs</string>
    <string name="gas">Gas</string>
    <string name="gastritis_symptoms_and_signs">Gastritis Symptoms and Signs</string>
    <string name="gastroenteritis_stomach_flu_symptoms_and_signs">Gastroenteritis (Stomach Flu) Symptoms and Signs</string>
    <string name="generalized_anxiety_disorder_symptoms_and_signs">Generalized Anxiety Disorder Symptoms and Signs</string>
</resources>