<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EventActivity"
    tools:showIn="@layout/events_view"
    >

    <LinearLayout
        android:id="@+id/areaViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/areaBackButton"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="?attr/actionModeCloseDrawable"
            android:contentDescription="@string/areaViewBackButton" />

        <TextView
            android:id="@+id/currentAreaHeaderText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />
    </LinearLayout>

    <ImageView
        android:id="@+id/bodyImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/human_body_image"
        app:srcCompat="@drawable/body" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/partsList"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/areaViewHeader"
        android:layout_above="@+id/eventsBar"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:scrollbars="vertical" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/eventsBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</RelativeLayout>